--- a/templates/home.html
+++ b/templates/home.html
@@ -83,7 +83,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>My name is Abdoulaye Diallo , I graduate from University of Potsdam. Objective: Junior python developer position.</p>
+          <h1>I graduated from University of Potsdam. Objective: Junior python/django developer position.</h1>
         </div>
 
         <div class="row">
@@ -107,7 +107,6 @@
 
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master in Physics</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>dialloa626@yahoo.fr</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
             </div>
@@ -189,7 +188,7 @@
 
          <div class="section-title">
            <h2>languages</h2>
-           <p>I speak frensh,German and English.</p>
+           <p>I speak french,german and english.</p>
          </div>
 
          <div class="row languages-content">
@@ -211,21 +210,12 @@
              </div>
 
              <div class="progress">
-               <span class="language">German <i class="val">75%</i></span>
+               <span class="language">German <i class="val">90%</i></span>
                <div class="progress-bar-wrap">
                  <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                </div>
              </div>
 
-           </div>
-
-           <div class="col-lg-6" >
-             <div class="progress">
-               <span class="language">German<i class="val">80%</i></span>
-               <div class="progress-bar-wrap">
-                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-               </div>
-             </div>
            </div>
          </div>
        </div>
@@ -243,7 +233,7 @@
 
         <div class="row">
           <div class="col-lg-6" >
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Abdoulaye Diallo</h4>
               <p><em>Curious, creative and result oriented. If I dont know, can do research and figure it out.</em></p>
@@ -256,7 +246,7 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>I hold a Master degree in  theoritical Physics; Python/Django certificate, Udemy </h4>
+              <h4>I hold a Master degree in  theoritical physics; Python/Django certificate, Udemy </h4>
               <p><em>Institut of Physics and Astronomy , Postsdam, Germany</em></p>
               <br>
              <div class="resume-item">
