--- a/templates/home.html
+++ b/templates/home.html
@@ -236,7 +236,7 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Abdoulaye Diallo</h4>
-              <p><em>Curious, creative and result oriented. If I dont know, can do research and figure it out.</em></p>
+              <p><em>Curious, creative and result oriented.</em></p>
               <ul>
                 <li>Houston, TX , 77042</li>
                 <li>3464347487</li>
