--- a/templates/home.html
+++ b/templates/home.html
@@ -98,6 +98,7 @@
                 <ul>
 
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://diallophys.herokuapp.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Project:</strong> <span>myecom-d3316736b4de.herokuapp.com/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>3464347487</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>HOUSTON, USA</span></li>
                 </ul>
